force-app/main/default/objects/Opportunity/fields/Account_Record_Type_Name__c.field-meta.xml
<CustomField>
    <fullName>Account_Record_Type_Name__c</fullName>
    <formula>Account.Record_Type_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Record Type Name</label>
    <type>Text</type>
</CustomField>