force-app/main/default/objects/Opportunity/fields/Agency_Parent_Account__c.field-meta.xml
<CustomField>
    <fullName>Agency_Parent_Account__c</fullName>
    <formula>Agency__r.ParentId</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Agency Parent Account</label>
    <type>Text</type>
</CustomField>