force-app/main/default/objects/Opportunity/fields/Agency_RecordName__c.field-meta.xml
<CustomField>
    <fullName>Agency_RecordName__c</fullName>
    <formula>Secondary_Agency__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Agency RecordName</label>
    <type>Text</type>
</CustomField>