force-app/main/default/objects/Opportunity/fields/AM_Lead__c.field-meta.xml
<CustomField>
    <fullName>AM_Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>AM Lead</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Opportunities1</relationshipName>
    <type>Lookup</type>
</CustomField>