force-app/main/default/objects/Opportunity/fields/Billing_Level__c.field-meta.xml
<CustomField>
    <fullName>Billing_Level__c</fullName>
    <label>Billing Level</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Account</fullName>
                <default>true</default>
                <label>Account</label>
            </value>
            <value>
                <fullName>Agency</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>