force-app/main/default/objects/Opportunity/fields/Billing_Note__c.field-meta.xml
<CustomField>
    <fullName>Billing_Note__c</fullName>
    <description>Additional Note on Billing</description>
    <label>Billing Note</label>
    <length>255</length>
    <type>Text</type>
</CustomField>