force-app/main/default/objects/Opportunity/fields/billing_updated__c.field-meta.xml
<CustomField>
    <fullName>billing_updated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>billing updated</label>
    <type>Checkbox</type>
</CustomField>