force-app/main/default/objects/Opportunity/fields/Brand_Id__c.field-meta.xml
<CustomField>
    <fullName>Brand_Id__c</fullName>
    <label>Brand Id</label>
    <length>32</length>
    <type>Text</type>
</CustomField>