force-app/main/default/objects/Opportunity/fields/Campaign_Manager__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Manager__c</fullName>
    <label>Campaign Manager</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Anjali Singh</fullName>
            </value>
            <value>
                <fullName>Balaji Ramana</fullName>
            </value>
            <value>
                <fullName>Chaitanya Dupuguntla</fullName>
            </value>
            <value>
                <fullName>Daishon Murrell</fullName>
            </value>
            <value>
                <fullName>Elton Andrade</fullName>
            </value>
            <value>
                <fullName>Jeff Oriente</fullName>
            </value>
            <value>
                <fullName>Jeremy Zachariah</fullName>
            </value>
            <value>
                <fullName>Lingeshwaran Mahendiran</fullName>
            </value>
            <value>
                <fullName>Loganathan Chakkaravarthy</fullName>
            </value>
            <value>
                <fullName>Mason Hinrichs</fullName>
            </value>
            <value>
                <fullName>Meghana Pashikanti</fullName>
            </value>
            <value>
                <fullName>Ravi Kumar</fullName>
            </value>
            <value>
                <fullName>Shilpa Balasubramanya</fullName>
            </value>
            <value>
                <fullName>Swagat Senapati</fullName>
            </value>
            <value>
                <fullName>Syed Saad</fullName>
            </value>
            <value>
                <fullName>Tarun Dalwani</fullName>
            </value>
            <value>
                <fullName>Tejal Sawant</fullName>
            </value>
            <value>
                <fullName>Tejo sai kumar Eepu</fullName>
            </value>
            <value>
                <fullName>Tiffany Cook</fullName>
            </value>
            <value>
                <fullName>Viji Lakshmana</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>