force-app/main/default/objects/Opportunity/fields/Campaign_Name__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Name__c</fullName>
    <inlineHelpText>This value gets appended to the end of the opportunity name</inlineHelpText>
    <label>Campaign Name</label>
    <type>TextArea</type>
</CustomField>