force-app/main/default/objects/Opportunity/fields/checkRecordType__c.field-meta.xml
<CustomField>
    <fullName>checkRecordType__c</fullName>
    <formula>RecordType.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>checkRecordType</label>
    <type>Text</type>
</CustomField>