force-app/main/default/objects/Opportunity/fields/ChekParentRecordType__c.field-meta.xml
<CustomField>
    <fullName>ChekParentRecordType__c</fullName>
    <formula>RecordType.DeveloperName == &apos;Parent_Opportunity&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ChekParentRecordType</label>
    <type>Checkbox</type>
</CustomField>