force-app/main/default/objects/Opportunity/fields/cloned_id__c.field-meta.xml
<CustomField>
    <fullName>cloned_id__c</fullName>
    <label>cloned id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>