force-app/main/default/objects/Opportunity/fields/Dropbox_URL__c.field-meta.xml
<CustomField>
    <fullName>Dropbox_URL__c</fullName>
    <label>Dropbox URL</label>
    <type>Url</type>
</CustomField>