force-app/main/default/objects/Opportunity/fields/Estimated_Booking_Amount__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Booking_Amount__c</fullName>
    <description>Estimated Revenue for Programmatic Opps</description>
    <label>Estimated Booking Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>