force-app/main/default/objects/Opportunity/fields/Fifth_Billing_Contact__c.field-meta.xml
<CustomField>
    <fullName>Fifth_Billing_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Fifth Billing Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Opportunities (Fifth Billing Contact)</relationshipLabel>
    <relationshipName>Opportunities4</relationshipName>
    <type>Lookup</type>
</CustomField>