force-app/main/default/objects/Opportunity/fields/Flight_Start_Date_Quarter__c.field-meta.xml
<CustomField>
    <fullName>Flight_Start_Date_Quarter__c</fullName>
    <formula>IF(!ISBLANK(Flight_Start_Date__c), (&apos;Q&apos; + TEXT(CEILING(MONTH(Flight_Start_Date__c) / 3 )) + &apos; &apos; + TEXT(YEAR(Flight_Start_Date__c))), &apos;&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Flight Start Date Quarter</label>
    <type>Text</type>
</CustomField>