force-app/main/default/objects/Opportunity/fields/Fourth_Billing_Contact__c.field-meta.xml
<CustomField>
    <fullName>Fourth_Billing_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Fourth Billing Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Opportunities (Fourth Billing Contact)</relationshipLabel>
    <relationshipName>Opportunities3</relationshipName>
    <type>Lookup</type>
</CustomField>