force-app/main/default/objects/Opportunity/fields/Full_Oppty_Id__c.field-meta.xml
<CustomField>
    <fullName>Full_Oppty_Id__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Full Oppty Id</label>
    <type>Text</type>
</CustomField>