force-app/main/default/objects/Opportunity/fields/has_been_closed__c.field-meta.xml
<CustomField>
    <fullName>has_been_closed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Has the opp ever been closed</description>
    <label>Has been closed</label>
    <type>Checkbox</type>
</CustomField>