force-app/main/default/objects/Opportunity/fields/Holding_Company__c.field-meta.xml
<CustomField>
    <fullName>Holding_Company__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Holding Company</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Opportunities (Holding Company)</relationshipLabel>
    <relationshipName>Opportunities1</relationshipName>
    <type>Lookup</type>
</CustomField>