force-app/main/default/objects/Opportunity/fields/Holding_Company_Name__c.field-meta.xml
<CustomField>
    <fullName>Holding_Company_Name__c</fullName>
    <formula>Holding_Company__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Holding Company Name</label>
    <type>Text</type>
</CustomField>