force-app/main/default/objects/Opportunity/fields/Industry_Type__c.field-meta.xml
<CustomField>
    <fullName>Industry_Type__c</fullName>
    <label>Industry Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Auto</fullName>
            </value>
            <value>
                <fullName>CPG</fullName>
            </value>
            <value>
                <fullName>Education</fullName>
            </value>
            <value>
                <fullName>Financial Services</fullName>
            </value>
            <value>
                <fullName>Gambling</fullName>
            </value>
            <value>
                <fullName>Insurance</fullName>
            </value>
            <value>
                <fullName>Media &amp; Entertainment</fullName>
            </value>
            <value>
                <fullName>Pharma &amp; Healthcare</fullName>
            </value>
            <value>
                <fullName>Political</fullName>
            </value>
            <value>
                <fullName>QSR</fullName>
            </value>
            <value>
                <fullName>Retail</fullName>
            </value>
            <value>
                <fullName>Tech/Telco</fullName>
            </value>
            <value>
                <fullName>Travel</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
            <value>
                <fullName>Accounting Services</fullName>
                <isActive>false</isActive>
                <label>Accounting Services</label>
            </value>
            <value>
                <fullName>Advertising Agencies</fullName>
                <isActive>false</isActive>
                <label>Advertising Agencies</label>
            </value>
            <value>
                <fullName>Aerospace &amp; Defense</fullName>
                <isActive>false</isActive>
                <label>Aerospace &amp; Defense</label>
            </value>
            <value>
                <fullName>Agriculture</fullName>
                <isActive>false</isActive>
                <label>Agriculture</label>
            </value>
            <value>
                <fullName>Apparel</fullName>
                <isActive>false</isActive>
                <label>Apparel</label>
            </value>
            <value>
                <fullName>Architecture &amp; Engineering</fullName>
                <isActive>false</isActive>
                <label>Architecture &amp; Engineering</label>
            </value>
            <value>
                <fullName>Banking</fullName>
                <isActive>false</isActive>
                <label>Banking</label>
            </value>
            <value>
                <fullName>Beverages</fullName>
                <isActive>false</isActive>
                <label>Beverages</label>
            </value>
            <value>
                <fullName>Biotechnology</fullName>
                <isActive>false</isActive>
                <label>Biotechnology</label>
            </value>
            <value>
                <fullName>Broadcast Media</fullName>
                <isActive>false</isActive>
                <label>Broadcast Media</label>
            </value>
            <value>
                <fullName>Business Services</fullName>
                <isActive>false</isActive>
                <label>Business Services</label>
            </value>
            <value>
                <fullName>Chemicals</fullName>
                <isActive>false</isActive>
                <label>Chemicals</label>
            </value>
            <value>
                <fullName>Communications</fullName>
                <isActive>false</isActive>
                <label>Communications</label>
            </value>
            <value>
                <fullName>Computer Software</fullName>
                <isActive>false</isActive>
                <label>Computer Software</label>
            </value>
            <value>
                <fullName>Construction</fullName>
                <isActive>false</isActive>
                <label>Construction</label>
            </value>
            <value>
                <fullName>Consulting</fullName>
                <isActive>false</isActive>
                <label>Consulting</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>