force-app/main/default/objects/Opportunity/fields/IO_Impression_Goal__c.field-meta.xml
<CustomField>
    <fullName>IO_Impression_Goal__c</fullName>
    <label>IO Impression Goal</label>
    <length>255</length>
    <type>Text</type>
</CustomField>