force-app/main/default/objects/Opportunity/fields/IO_Number__c.field-meta.xml
<CustomField>
    <fullName>IO_Number__c</fullName>
    <inlineHelpText>IO/PO number provided by client e.g. D1A2OV5.</inlineHelpText>
    <label>IO Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>