force-app/main/default/objects/Opportunity/fields/IO_Number_Available__c.field-meta.xml
<CustomField>
    <fullName>IO_Number_Available__c</fullName>
    <inlineHelpText>Select if IO Number is available from the client</inlineHelpText>
    <label>IO Number Available</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Available</fullName>
            </value>
            <value>
                <fullName>Not Available</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>