force-app/main/default/objects/Opportunity/fields/Is_Closed_Lost_Email_Sent__c.field-meta.xml
<CustomField>
    <fullName>Is_Closed_Lost_Email_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Closed Lost Email Sent?</label>
    <type>Checkbox</type>
</CustomField>