force-app/main/default/objects/Opportunity/fields/Is_Name_Manual_Update__c.field-meta.xml
<CustomField>
    <fullName>Is_Name_Manual_Update__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Name Manual Update?</label>
    <type>Checkbox</type>
</CustomField>