force-app/main/default/objects/Opportunity/fields/Is_Test_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Is_Test_Opportunity__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Test Opportunity?</label>
    <type>Checkbox</type>
</CustomField>