force-app/main/default/objects/Opportunity/fields/KPI_Note__c.field-meta.xml
<CustomField>
    <fullName>KPI_Note__c</fullName>
    <description>KPI Threshold, Any other KPI to be tracked, Any other comment</description>
    <label>KPI Note</label>
    <length>255</length>
    <type>Text</type>
</CustomField>