force-app/main/default/objects/Opportunity/fields/LID__CurrentGenerators__c.field-meta.xml
<CustomField>
    <fullName>LID__CurrentGenerators__c</fullName>
    <label>Current Generator(s)</label>
    <length>100</length>
    <type>Text</type>
</CustomField>