force-app/main/default/objects/Opportunity/fields/LID__My_DateTime__c.field-meta.xml
<CustomField>
    <fullName>LID__My_DateTime__c</fullName>
    <label>My DateTime</label>
    <type>DateTime</type>
</CustomField>