force-app/main/default/objects/Opportunity/fields/LID__My_Geolocation__c.field-meta.xml
<CustomField>
    <fullName>LID__My_Geolocation__c</fullName>
    <label>My Geolocation</label>
    <scale>2</scale>
    <type>Location</type>
</CustomField>