force-app/main/default/objects/Opportunity/fields/Loss_Reason__c.field-meta.xml
<CustomField>
    <fullName>Loss_Reason__c</fullName>
    <label>Loss Reason</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>StageName</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Competitor</fullName>
            </value>
            <value>
                <fullName>Campaign Paused</fullName>
            </value>
            <value>
                <fullName>Change in client strategy</fullName>
            </value>
            <value>
                <fullName>Client Budget Cuts</fullName>
            </value>
            <value>
                <fullName>Client went dark/No Feedback received</fullName>
            </value>
            <value>
                <fullName>Duplicate Opportunity</fullName>
            </value>
            <value>
                <fullName>Missing Capability</fullName>
            </value>
            <value>
                <fullName>No RFP</fullName>
            </value>
            <value>
                <fullName>ProActive Proposal</fullName>
            </value>
            <value>
                <fullName>Rates and/or Minimums</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>