force-app/main/default/objects/Opportunity/fields/Main_Point_Of_Contact_Primary__c.field-meta.xml
<CustomField>
    <fullName>Main_Point_Of_Contact_Primary__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Main Point Of Contact (Primary)</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Opportunities (Main Point Of Contact (Primary))</relationshipLabel>
    <relationshipName>Opportunities_MainPOC</relationshipName>
    <type>Lookup</type>
</CustomField>