force-app/main/default/objects/Opportunity/fields/Market_Type__c.field-meta.xml
<CustomField>
    <fullName>Market_Type__c</fullName>
    <description>Has validation rule based on the picklist values.</description>
    <inlineHelpText>M&amp;E - Media and Entertainment
GM - General Market</inlineHelpText>
    <label>Market Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>GM</fullName>
            </value>
            <value>
                <fullName>M&amp;E</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
                <isActive>false</isActive>
                <label>Other</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>