force-app/main/default/objects/Opportunity/fields/Media_Plan_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Media_Plan_Due_Date__c</fullName>
    <description>Date by which Media plan is needed</description>
    <label>Media Plan Due Date</label>
    <type>Date</type>
</CustomField>