force-app/main/default/objects/Opportunity/fields/Net_Terms_Note__c.field-meta.xml
<CustomField>
    <fullName>Net_Terms_Note__c</fullName>
    <label>Net Terms Note</label>
    <length>255</length>
    <type>Text</type>
</CustomField>