force-app/main/default/objects/Opportunity/fields/NetSuite_Invoice_Sync__c.field-meta.xml
<CustomField>
    <fullName>NetSuite_Invoice_Sync__c</fullName>
    <defaultValue>false</defaultValue>
    <label>NetSuite Invoice Sync</label>
    <type>Checkbox</type>
</CustomField>