force-app/main/default/objects/Opportunity/fields/Old_Org_Acct_Id__c.field-meta.xml
<CustomField>
    <fullName>Old_Org_Acct_Id__c</fullName>
    <label>Old Org Acct Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>