force-app/main/default/objects/Opportunity/fields/Original_Booking_Amount__c.field-meta.xml
<CustomField>
    <fullName>Original_Booking_Amount__c</fullName>
    <label>Original Booking Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>