force-app/main/default/objects/Opportunity/fields/Partner__c.field-meta.xml
<CustomField>
    <fullName>Partner__c</fullName>
    <inlineHelpText>Select Magnite if this opportunity was in partnership with Magnite</inlineHelpText>
    <label>Partner</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>DeepIntent</fullName>
            </value>
            <value>
                <fullName>Magnite</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>