force-app/main/default/objects/Opportunity/fields/Partner_Seller_Email__c.field-meta.xml
<CustomField>
    <fullName>Partner_Seller_Email__c</fullName>
    <inlineHelpText>If the Opportunity is in partnership witha Partner (eg Magnite), Please enter the parter sellers Email</inlineHelpText>
    <label>Partner Seller Email</label>
    <type>Email</type>
</CustomField>