force-app/main/default/objects/Opportunity/fields/Partner_Seller_Name__c.field-meta.xml
<CustomField>
    <fullName>Partner_Seller_Name__c</fullName>
    <inlineHelpText>If this Opportunity is in partnership with other organization (eg Magnite), Please enter the name of seller from Magnite</inlineHelpText>
    <label>Partner Seller Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>